--- a/www/index.html
+++ b/www/index.html
@@ -32,6 +32,16 @@
     <p>This is Page Two. If you click on the link below, it will take you to Page One.</p>
     <a href="#pageone">Go to Page One</a>
   </div>
+    
+<div data-role="page" id="pagethree">
+  <div data-role="header">
+    <h1>Welcome To My Homepage</h1>
+  </div>
+
+  <div data-role="main" class="ui-content">
+    <p>This is Page three. If you click on the link below, it will take you to Page Two.</p>
+    <a href="#pagetwo">Go to Page Two</a>
+  </div>    
 
   <div data-role="footer">
     <h1>Footer Text</h1>
